# CamDepthKit

./: .gitignore  CMakeLists.txt  README.md
sources/cmake/: OpenCVConfig.cmake  azure-kinect-sensor-sdk-config-version.cmake  azure-kinect-sensor-sdk-config.cmake
sources/kit/: CMakeLists.txt
sources/kit/depth/: camera.cpp  camera.h  cloud.cpp  cloud.h  detectMarkers.cpp  detectMarkers.h  quat.cpp  quat.h  trigonometry.cpp  trigonometry.h  type.h
sources/kit/glbridge/: CMakeLists.txt  glwidget.cpp  glwidget.h
sources/kit/resources/buttons/: res.qrc
sources/kit/widgets/: CMakeLists.txt
sources/kit/widgets/src/: mainwindow.cpp  mainwindow.h
sources/kit/widgets/ui/: mainwindow.ui
